--- a/public/index.html
+++ b/public/index.html
@@ -1,35 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <head>
+      <link rel="manifest" href="./manifest.json" />
+      <link rel="apple-touch-icon" sizes="76x76" href="https://www.dl.dropboxusercontent.com/s/i3vkhmk88rjtvuu/Screen%20Shot%202022-02-20%20at%206.27.52%20PM.png?dl=0">
+      <link rel="icon" type="image/png" sizes="32x32" href="https://www.dl.dropboxusercontent.com/s/i3vkhmk88rjtvuu/Screen%20Shot%202022-02-20%20at%206.27.52%20PM.png?dl=0">
+      <link rel="icon" type="image/png" sizes="16x16" href="https://www.dl.dropboxusercontent.com/s/i3vkhmk88rjtvuu/Screen%20Shot%202022-02-20%20at%206.27.52%20PM.png?dl=0">
+       
+      <link rel="mask-icon" href="https://www.dl.dropboxusercontent.com/s/i3vkhmk88rjtvuu/Screen%20Shot%202022-02-20%20at%206.27.52%20PM.png?dl=0" color="#42b8bf">
+      <meta name="msapplication-TileColor" content="#00aba9">
+      <meta name="theme-color" content="#77728e">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap"
       rel="stylesheet"
     />
-    <title>
-      Anything washes <span role="img"aria-label="soap">🧼</span> - userer
+    <title><!--span role="img"aria-label="soap">🧼</span-->
+      Anything washes &#129532; - userer
       contractor liability donee-beneficiary-surrendered-bid: landlord, lender,
       insurer
     </title>
